--- a/backend/src/CodingJournal.Infrastructure/CodingJournal.Infrastructure.csproj
+++ b/backend/src/CodingJournal.Infrastructure/CodingJournal.Infrastructure.csproj
@@ -5,6 +5,14 @@
     <ProjectReference Include="..\CodingJournal.Domain\CodingJournal.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
